# synchrogit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  flake.nix
.githooks/: commit-msg
.github/workflows/: apt.yml  aur.yml  brew.yml  ci.yml  commitlint.yml  copr-token-check.yml  copr.yml  release.yml
aur/synchrogit/: PKGBUILD.in
aur/synchrogit-bin/: PKGBUILD.in
docs/: config.md  operations.md  synchrogit.1.md
examples/: config.toml
packaging/: synchrogit.service
packaging/aur/synchrogit/: PKGBUILD.in
packaging/aur/synchrogit-bin/: PKGBUILD.in
packaging/brew/: synchrogit.rb.in
packaging/copr/: synchrogit.spec.in
packaging/systemd/: synchrogit@.service
scripts/: render-aur-packages.sh  render-brew-formula.sh
src/: cli.rs  clock.rs  error.rs  lib.rs  log_setup.rs  main.rs  state.rs
src/config/: load.rs  mod.rs  model.rs  watcher.rs
src/git/: cmd.rs  conflict.rs  mod.rs  status.rs  sync_cycle.rs
src/ipc/: client.rs  mod.rs  protocol.rs  server.rs  socket.rs
src/runtime/: mod.rs  supervisor.rs
src/util/: hostname.rs  mod.rs
src/worker/: debouncer.rs  fs_watch.rs  handle.rs  mod.rs  task.rs
tests/: config_reload.rs  config_supervisor.rs  ipc.rs  sync_e2e.rs
tests/common/: mod.rs
