[package]
name = "synchrogit"
version = "26.7.6"
edition = "2024"
rust-version = "1.94"
description = "Daemon that keeps git repositories synced with their remotes"
license = "MIT"
repository = "https://github.com/partanskiy/synchrogit"
readme = "README.md"
keywords = ["git", "sync", "daemon", "obsidian", "notes"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "synchrogit"
path = "src/main.rs"

[lib]
name = "synchrogit"
path = "src/lib.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "fs", "process", "signal", "sync", "time", "io-util", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "2.0"
gethostname = "0.5"
libc = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
once_cell = "1.20"
notify = "8.0"
humantime = "2.1"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.13"
