[package]
name = "synchrogit"
version = "26.7.7"
edition = "2024"
rust-version = "1.94"
description = "Daemon that keeps git repositories synced with their remotes"
license = "MIT"
repository = "https://github.com/partanskiy/synchrogit"
readme = "README.md"
keywords = ["git", "sync", "daemon", "obsidian", "notes"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "synchrogit"
path = "src/main.rs"

[lib]
name = "synchrogit"
path = "src/lib.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "fs", "process", "signal", "sync", "time", "io-util", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "2.0"
gethostname = "0.5"
libc = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
once_cell = "1.20"
notify = "8.0"
humantime = "2.1"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.13"

[package.metadata.deb]
maintainer = "Ilya Partanskiy <partanskiy.im@gmail.com>"
copyright = "2026, Ilya Partanskiy"
extended-description = "Watches configured git repositories, commits local changes with timestamp messages, merges remote changes, and pushes — designed for personal sync repositories such as Obsidian vaults."
section = "vcs"
priority = "optional"
depends = "git"
assets = [
    ["target/release/synchrogit", "usr/bin/", "755"],
    ["target/man/synchrogit.1", "usr/share/man/man1/", "644"],
    ["README.md", "usr/share/doc/synchrogit/", "644"],
    ["packaging/config.example.toml", "usr/share/doc/synchrogit/", "644"],
    ["packaging/systemd/synchrogit.service", "usr/lib/systemd/user/", "644"],
    ["packaging/systemd/synchrogit@.service", "usr/lib/systemd/system/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/synchrogit", dest = "/usr/bin/synchrogit", mode = "755" },
    { source = "target/man/synchrogit.1", dest = "/usr/share/man/man1/synchrogit.1", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/synchrogit/README.md", mode = "644", doc = true },
    { source = "packaging/config.example.toml", dest = "/usr/share/doc/synchrogit/config.example.toml", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/licenses/synchrogit/LICENSE", mode = "644" },
    { source = "packaging/systemd/synchrogit.service", dest = "/usr/lib/systemd/user/synchrogit.service", mode = "644" },
    { source = "packaging/systemd/synchrogit@.service", dest = "/usr/lib/systemd/system/synchrogit@.service", mode = "644" },
]

[package.metadata.generate-rpm.requires]
git = "*"
